--- a/PirateHegemonyOnline/Classes/Arms/ArmsDisplayCollectionViewController.xib
+++ b/PirateHegemonyOnline/Classes/Arms/ArmsDisplayCollectionViewController.xib
@@ -1,31 +1,93 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ArmsDisplayCollectionViewController">
             <connections>
+                <outlet property="collectionView" destination="hR4-um-V0h" id="Dd4-b5-rbJ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <viewLayoutGuide key="safeArea" id="ij9-ne-Ryy"/>
-            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="c7k-ch-oGk">
-                <size key="itemSize" width="50" height="50"/>
-                <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-            </collectionViewFlowLayout>
-            <connections>
-                <outlet property="dataSource" destination="-1" id="Tng-2m-Rnh"/>
-                <outlet property="delegate" destination="-1" id="9aC-8N-iBw"/>
-            </connections>
-        </collectionView>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ohJ-eV-Dx8">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B04-zc-zYu">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bI2-7Q-4fE">
+                                    <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="軍團" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRf-IE-fYk">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="44" id="Qal-YF-FfF"/>
+                                        <constraint firstAttribute="trailing" secondItem="FRf-IE-fYk" secondAttribute="trailing" id="Suq-sc-fNg"/>
+                                        <constraint firstItem="FRf-IE-fYk" firstAttribute="top" secondItem="bI2-7Q-4fE" secondAttribute="top" id="kid-Vd-hzJ"/>
+                                        <constraint firstAttribute="bottom" secondItem="FRf-IE-fYk" secondAttribute="bottom" id="nTV-U4-kgE"/>
+                                        <constraint firstItem="FRf-IE-fYk" firstAttribute="leading" secondItem="bI2-7Q-4fE" secondAttribute="leading" id="rY2-OR-4q8"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" red="1" green="0.83529411760000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="bI2-7Q-4fE" secondAttribute="bottom" id="HBE-Dm-gCJ"/>
+                                <constraint firstItem="bI2-7Q-4fE" firstAttribute="leading" secondItem="B04-zc-zYu" secondAttribute="leading" id="QJc-Ua-DQW"/>
+                                <constraint firstAttribute="trailing" secondItem="bI2-7Q-4fE" secondAttribute="trailing" id="sME-JL-CSo"/>
+                            </constraints>
+                        </view>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="hR4-um-V0h">
+                            <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="Lt0-Ve-Hm1">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="XRS-0a-xWN"/>
+                                <outlet property="delegate" destination="-1" id="G3j-AM-Ig0"/>
+                            </connections>
+                        </collectionView>
+                    </subviews>
+                    <color key="backgroundColor" red="0.1647058824" green="0.70980392160000005" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="B04-zc-zYu" secondAttribute="trailing" id="08t-XM-OyK"/>
+                        <constraint firstItem="B04-zc-zYu" firstAttribute="top" secondItem="ohJ-eV-Dx8" secondAttribute="top" id="0gk-Gj-epW"/>
+                        <constraint firstItem="hR4-um-V0h" firstAttribute="leading" secondItem="ohJ-eV-Dx8" secondAttribute="leading" id="9Wz-Wx-oTN"/>
+                        <constraint firstAttribute="trailing" secondItem="hR4-um-V0h" secondAttribute="trailing" id="KVq-w0-5lX"/>
+                        <constraint firstItem="hR4-um-V0h" firstAttribute="top" secondItem="B04-zc-zYu" secondAttribute="bottom" id="hAx-D5-3qA"/>
+                        <constraint firstItem="B04-zc-zYu" firstAttribute="leading" secondItem="ohJ-eV-Dx8" secondAttribute="leading" id="rG8-ip-16K"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstItem="bI2-7Q-4fE" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="5eS-sm-OIW"/>
+                <constraint firstItem="ohJ-eV-Dx8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GD2-Ij-02d"/>
+                <constraint firstAttribute="trailing" secondItem="ohJ-eV-Dx8" secondAttribute="trailing" id="O4C-Ay-x2g"/>
+                <constraint firstItem="ohJ-eV-Dx8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="dpB-ie-hp6"/>
+                <constraint firstAttribute="bottom" secondItem="ohJ-eV-Dx8" secondAttribute="bottom" id="dum-Mw-X1M"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="hR4-um-V0h" secondAttribute="bottom" id="y3L-Gc-sl4"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="139" y="89"/>
+        </view>
     </objects>
 </document>
