--- a/PirateHegemonyOnline/Classes/Arms/Views/ArmsDisplayCollectionViewCell.xib
+++ b/PirateHegemonyOnline/Classes/Arms/Views/ArmsDisplayCollectionViewCell.xib
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,13 +11,88 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ArmsDisplayCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y4n-8S-TXy">
+                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="janissary01" translatesAutoresizingMaskIntoConstraints="NO" id="Wln-uQ-njd">
+                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qc0-zG-IlF">
+                                <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jow-H0-hIB">
+                                        <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                        <fontDescription key="fontDescription" name="Optima-Italic" family="Optima" pointSize="22"/>
+                                        <color key="textColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="jow-H0-hIB" firstAttribute="top" secondItem="qc0-zG-IlF" secondAttribute="top" id="QMM-ue-xL7"/>
+                                    <constraint firstItem="jow-H0-hIB" firstAttribute="leading" secondItem="qc0-zG-IlF" secondAttribute="leading" id="Uss-PY-a5W"/>
+                                    <constraint firstAttribute="bottom" secondItem="jow-H0-hIB" secondAttribute="bottom" id="cCs-pL-pRo"/>
+                                    <constraint firstAttribute="width" secondItem="qc0-zG-IlF" secondAttribute="height" multiplier="1:1" id="vSe-Ky-a0p"/>
+                                    <constraint firstAttribute="trailing" secondItem="jow-H0-hIB" secondAttribute="trailing" id="zyF-KW-8B7"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CrW-nc-gsF">
+                                <rect key="frame" x="0.0" y="48" width="60" height="12"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s8T-Jk-Fgq">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="12"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="s8T-Jk-Fgq" firstAttribute="leading" secondItem="CrW-nc-gsF" secondAttribute="leading" id="Dya-tH-aSs"/>
+                                    <constraint firstAttribute="bottom" secondItem="s8T-Jk-Fgq" secondAttribute="bottom" id="Et5-rz-mC7"/>
+                                    <constraint firstItem="s8T-Jk-Fgq" firstAttribute="top" secondItem="CrW-nc-gsF" secondAttribute="top" id="HKj-xE-26C"/>
+                                    <constraint firstAttribute="trailing" secondItem="s8T-Jk-Fgq" secondAttribute="trailing" id="z3d-ST-hxX"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="CrW-nc-gsF" secondAttribute="trailing" id="6wa-hw-shm"/>
+                            <constraint firstItem="qc0-zG-IlF" firstAttribute="top" secondItem="y4n-8S-TXy" secondAttribute="top" id="9B3-4E-F5Q"/>
+                            <constraint firstItem="Wln-uQ-njd" firstAttribute="top" secondItem="y4n-8S-TXy" secondAttribute="top" id="Dcd-1d-F3x"/>
+                            <constraint firstItem="qc0-zG-IlF" firstAttribute="width" secondItem="qc0-zG-IlF" secondAttribute="height" multiplier="1:1" id="KRM-c5-CSQ"/>
+                            <constraint firstAttribute="trailing" secondItem="Wln-uQ-njd" secondAttribute="trailing" id="dTI-LU-2dJ"/>
+                            <constraint firstAttribute="bottom" secondItem="CrW-nc-gsF" secondAttribute="bottom" id="fXO-gn-day"/>
+                            <constraint firstItem="qc0-zG-IlF" firstAttribute="width" secondItem="y4n-8S-TXy" secondAttribute="width" multiplier="0.4" id="iby-eG-faY"/>
+                            <constraint firstAttribute="bottom" secondItem="Wln-uQ-njd" secondAttribute="bottom" id="jTs-hf-lxT"/>
+                            <constraint firstItem="CrW-nc-gsF" firstAttribute="leading" secondItem="y4n-8S-TXy" secondAttribute="leading" id="lAY-9Z-thc"/>
+                            <constraint firstItem="Wln-uQ-njd" firstAttribute="leading" secondItem="y4n-8S-TXy" secondAttribute="leading" id="wlP-kW-Zc7"/>
+                            <constraint firstItem="qc0-zG-IlF" firstAttribute="leading" secondItem="y4n-8S-TXy" secondAttribute="leading" id="zB5-mH-V0L"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="y4n-8S-TXy" secondAttribute="bottom" id="1JT-M4-E8E"/>
+                <constraint firstAttribute="trailing" secondItem="y4n-8S-TXy" secondAttribute="trailing" id="4e3-4Z-l4a"/>
+                <constraint firstItem="y4n-8S-TXy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="5Ug-4P-GDT"/>
+                <constraint firstItem="y4n-8S-TXy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="hwE-ql-9aH"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
+            <connections>
+                <outlet property="atkLabel" destination="s8T-Jk-Fgq" id="SVA-HX-TQb"/>
+                <outlet property="categoryLabel" destination="jow-H0-hIB" id="hXm-qh-LpG"/>
+            </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="88.392857142857139"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="janissary01" width="190" height="190"/>
+    </resources>
 </document>
