--- a/PirateHegemonyOnline/Classes/DrawCard/DrawCardViewController.xib
+++ b/PirateHegemonyOnline/Classes/DrawCard/DrawCardViewController.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,7 +12,9 @@
             <connections>
                 <outlet property="atkLabel" destination="ujy-OU-z7C" id="PUM-JV-1Ut"/>
                 <outlet property="categoryLabel" destination="AyV-cz-dVw" id="AZD-EZ-vib"/>
+                <outlet property="categoryView" destination="aoS-Vh-FpK" id="yEk-Jx-B40"/>
                 <outlet property="nameLabel" destination="sI6-Ol-N3T" id="WBt-0j-xHf"/>
+                <outlet property="nameView" destination="UbJ-0v-rKZ" id="FnZ-gG-Glp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,10 +33,10 @@
                                 <action selector="dimissButtonClick:" destination="-1" eventType="touchUpInside" id="hos-k8-mgM"/>
                             </connections>
                         </button>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yke-h4-yeO">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yke-h4-yeO" customClass="RoundCornerView">
                             <rect key="frame" x="37.5" y="78" width="300" height="511"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aoS-Vh-FpK">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aoS-Vh-FpK" customClass="RoundCornerView">
                                     <rect key="frame" x="40" y="40" width="105" height="105"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AyV-cz-dVw">
@@ -51,12 +54,17 @@
                                         <constraint firstItem="AyV-cz-dVw" firstAttribute="leading" secondItem="aoS-Vh-FpK" secondAttribute="leading" id="WWS-Tx-OxK"/>
                                         <constraint firstAttribute="width" secondItem="aoS-Vh-FpK" secondAttribute="height" multiplier="1:1" id="aaO-KM-HgN"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="12"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UbJ-0v-rKZ">
-                                    <rect key="frame" x="145" y="66.5" width="115" height="52.5"/>
+                                    <rect key="frame" x="125" y="66.5" width="135" height="52.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sI6-Ol-N3T">
-                                            <rect key="frame" x="0.0" y="0.0" width="115" height="52.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="135" height="52.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -70,7 +78,7 @@
                                         <constraint firstAttribute="bottom" secondItem="sI6-Ol-N3T" secondAttribute="bottom" id="rrO-FX-eIJ"/>
                                     </constraints>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LX5-GH-smk">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LX5-GH-smk" customClass="RoundCornerView">
                                     <rect key="frame" x="40" y="185" width="220" height="220"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="janissary01" translatesAutoresizingMaskIntoConstraints="NO" id="1Nl-9A-6v1">
@@ -85,6 +93,11 @@
                                         <constraint firstAttribute="bottom" secondItem="1Nl-9A-6v1" secondAttribute="bottom" id="L5J-n4-FWx"/>
                                         <constraint firstItem="1Nl-9A-6v1" firstAttribute="top" secondItem="LX5-GH-smk" secondAttribute="top" id="QRb-3G-kHp"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="8"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dfn-se-WYF">
                                     <rect key="frame" x="0.0" y="445" width="300" height="36"/>
@@ -119,9 +132,14 @@
                                 <constraint firstItem="Dfn-se-WYF" firstAttribute="leading" secondItem="Yke-h4-yeO" secondAttribute="leading" id="aVq-A6-s46"/>
                                 <constraint firstItem="UbJ-0v-rKZ" firstAttribute="height" secondItem="aoS-Vh-FpK" secondAttribute="height" multiplier="0.5" id="gmC-tb-AbN"/>
                                 <constraint firstItem="UbJ-0v-rKZ" firstAttribute="centerY" secondItem="aoS-Vh-FpK" secondAttribute="centerY" id="oPU-Nf-d6i"/>
-                                <constraint firstItem="UbJ-0v-rKZ" firstAttribute="leading" secondItem="aoS-Vh-FpK" secondAttribute="trailing" id="qMJ-by-T9b"/>
+                                <constraint firstItem="UbJ-0v-rKZ" firstAttribute="leading" secondItem="aoS-Vh-FpK" secondAttribute="trailing" constant="-20" id="qMJ-by-T9b"/>
                                 <constraint firstItem="aoS-Vh-FpK" firstAttribute="top" secondItem="Yke-h4-yeO" secondAttribute="top" constant="40" id="ycA-Ko-DZg"/>
                             </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="8"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </view>
                     </subviews>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.60079225352112675" colorSpace="custom" customColorSpace="calibratedRGB"/>
